2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: Sven Herzberg <herzi@gnome-de.org>

	* gtk-doc.make:
	* tests/gtk-doc.make:
	  Rebuild documentation of $(DOC_MODULE).types changed. Fixes #433338

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* Makefile.am:
	* configure.in:
	* gtkdoc-rebase.in:
	  Allow rebasing cross-references in generated docs. Fixes #434134.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	  Add a hack to gtkdoc-mkhtml to run uninstalled too.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	Patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.xsl:
	  Generate ONLINE tag in index.sgml.

	* gtkdoc-fixxref.in:
	  Allow to base links against online versions of xreffed docs.
	  Fixes #454916.
	  
	* gtkdoc-mkdb.in:
	  Add releaseinfo to doctemplates.

	* tests/bugs/docs/tester-docs.sgml:
	* tests/gobject/docs/tester-docs.sgml:
	  Update templates.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	  Use PERL5LIB envvar to use uninstalled gtkdoc-common.pl for tests.
	  Use tee to both show and redirect logs.
	  Build test-docs in check-local instead of all-local.
	  Fixes #459725.

2007-07-25  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-scan.in:
	  Some more debug prints and code cleaning.

2007-07-23  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtkdoc-mkdb.in:
	  Report undeclared symbols into a file. Fixes #436565.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Readd two debug prints and remove one obsolete one.

	* tests/bugs/Makefile.am:
	* tests/gobject/Makefile.am:
	  Enforce 'make clean' before 'make check'.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in: